add vercel configuration file
